Simplification of Grammar definition.

--- a/LRBee.GrammarDefinition/LRBee.GrammarDefinition.csproj
+++ b/LRBee.GrammarDefinition/LRBee.GrammarDefinition.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LRBee.Utilities\LRBee.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
