--- a/LRBee.Utilities/LRBee.Utilities.csproj
+++ b/LRBee.Utilities/LRBee.Utilities.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
+    <PackageReference Include="Optional" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
