Renamed the project from LRBee to LRToolkit. Renamed project files and folders.

--- a/LRToolkit.Lexing/LRToolkit.Lexing.csproj
+++ b/LRToolkit.Lexing/LRToolkit.Lexing.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LRBee.Utilities\LRBee.Utilities.csproj" />
+    <ProjectReference Include="..\LRToolkit.Utilities\LRToolkit.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
