--- a/LRToolkit.GrammarDefinition/LRToolkit.GrammarDefinition.csproj
+++ b/LRToolkit.GrammarDefinition/LRToolkit.GrammarDefinition.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LRBee.Utilities\LRBee.Utilities.csproj" />
+    <ProjectReference Include="..\LRToolkit.Utilities\LRToolkit.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
