Improved project folders structure.

--- a/src/LRToolkit.Parsing/LRToolkit.Parsing.csproj
+++ b/src/LRToolkit.Parsing/LRToolkit.Parsing.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <Reference Include="DFAutomaton">
-      <HintPath>..\Dependencies\DFAutomaton.dll</HintPath>
+      <HintPath>..\..\Dependencies\DFAutomaton.dll</HintPath>
     </Reference>
   </ItemGroup>
 
