--- a/samples/Playground/Playground.csproj
+++ b/samples/Playground/Playground.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\LRToolkit.GrammarDefinition\LRToolkit.GrammarDefinition.csproj" />
+    <ProjectReference Include="..\..\src\LRToolkit.Grammaring\LRToolkit.Grammaring.csproj" />
     <ProjectReference Include="..\..\src\LRToolkit.Lexing\LRToolkit.Lexing.csproj" />
     <ProjectReference Include="..\..\src\LRToolkit.Parsing\LRToolkit.Parsing.csproj" />
     <ProjectReference Include="..\..\src\LRToolkit.Utilities\LRToolkit.Utilities.csproj" />
