--- a/src/LRToolkit.Parsing/LRToolkit.Parsing.csproj
+++ b/src/LRToolkit.Parsing/LRToolkit.Parsing.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LRToolkit.GrammarDefinition\LRToolkit.GrammarDefinition.csproj" />
+    <ProjectReference Include="..\LRToolkit.Grammaring\LRToolkit.Grammaring.csproj" />
     <ProjectReference Include="..\LRToolkit.Lexing\LRToolkit.Lexing.csproj" />
   </ItemGroup>
 
