--- a/samples/Playground/Playground.csproj
+++ b/samples/Playground/Playground.csproj
@@ -16,12 +16,11 @@
 
   <ItemGroup>
     <Reference Include="DFAutomaton">
-      <HintPath>..\..\Dependencies\DFAutomaton.dll</HintPath>
+      <HintPath>..\..\lib\DFAutomaton.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Properties\" />
+    <Reference Include="PureMonads">
+      <HintPath>..\..\lib\PureMonads.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
