--- a/src/LRToolkit.Grammaring/LRToolkit.Grammaring.csproj
+++ b/src/LRToolkit.Grammaring/LRToolkit.Grammaring.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\LRToolkit.Utilities\LRToolkit.Utilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="PureMonads">
+      <HintPath>..\..\lib\PureMonads.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
